--- a/products.html
+++ b/products.html
@@ -60,11 +60,13 @@
 				
 
 				<div class="row">
+					<div class="row1">
 					<div class="col-xs-6">
 						<h3>Subtotal: $<span id="subtotal">0</span></h3>
 						<h3>Tax: <span id="tax">6.5%</span></h3>
 						<h3>Total: $<span id="total">0</span></h3>
 					</div>
+				</div>
 				</div>
 
 
